--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,8 +8,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css" rel="stylesheet">
+  <link href="~bulma-carousel/dist/css/bulma-carousel.min.css" rel="stylesheet"> -->
+
 </head>
 <body class="mat-typography">
+  <!-- <script src="~bulma-carousel/dist/js/bulma-carousel.min.js"></script> -->
+
   <app-root>  
       
   </app-root>
